--- a/Tyuiu.VikolAS.Sprint3.Task1.V15.Test/Tyuiu.VikolAS.Sprint3.Task1.V15.Test.csproj
+++ b/Tyuiu.VikolAS.Sprint3.Task1.V15.Test/Tyuiu.VikolAS.Sprint3.Task1.V15.Test.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.VikolAS.Sprint3.Task1.V15.Lib\Tyuiu.VikolAS.Sprint3.Task1.V15.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
