--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Tyuiu.VikolAS.Sprint3.Task1.V15/obj/Debug/net8.0/Tyuiu.VikolAS.Sprint3.Task1.V15.AssemblyInfo.cs
